--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -54,6 +54,7 @@
     padding: 10px 15px;
     right: 15px;
     top: 40px;
+    color: #333;
     font-size: 14px;
     line-height: 16px;
     background-color: var(--point-color);
