--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 @import "./reset.css";
-@import "./variables.css";
+@import "./common.css";
 @import "./animation.css";
 
 /* components */
@@ -50,96 +50,70 @@ body.body_is_chat .inner_header::after {
     }
 }
 
-.main_wrap {
-    overflow: hidden;
-    padding-top: 30px;
-    height: 100%;
-    box-sizing: border-box;
-}
-
-.content {
-    overflow: hidden;
-    overflow-y: auto;
-    padding: 80px 0 75px;
-    height: 100%;
-    box-sizing: border-box;
-}
-
-.content_inner {
-    overflow: hidden;
-    overflow-y: auto;
-    padding: 60px 0 30px;
-    height: 100%;
-    box-sizing: border-box;
-}
-
-.ellipsis {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-#splash_layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.index_box {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--point-color);
-    z-index: 1000;
-    animation: hideSplash_animation 0.3s ease-out forwards 0.8s;
-    -webkit-animation: hideSplash_animation 0.3s ease-out forwards 0.8s;
-}
-
-#pc_banner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--point-color);
-    z-index: 1000;
-}
-
-.pc_banner_icon {
-    margin-bottom: 20px;;
-    color: #733C3C;
-}
-
-.pc_banner_msg {
-    margin-bottom: 25px;
-    padding: 0 var(--common-padding);
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 24px;
+    padding: 30px var(--common-padding) 0;
     text-align: center;
-    word-break: keep-all;
+    align-items: center;
+    flex-direction: column;
 }
 
-.pc_link {
-    margin: 10px 0;
-    padding: 0 20px;
-    color: #fff;
-    font-size: 14px;
+.index_title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.index_desc {
+    margin-top: 20px;
+    color: var(--sub2-color);
+    font-size: 18px;
     font-weight: 400;
-    line-height: 40px;
-    background-color: #733C3C;
-    border-radius:6px;;
-    -webkit-border-radius:6px;
-    -moz-border-radius:6px;
-    -ms-border-radius:6px;
-    -o-border-radius:6px;
 }
 
-@media (min-width: 600px) {
-    #pc_banner {
-        display: flex;
-    }
+.index_form_box {
+    margin-top: 60px;
+}
+
+.index_input:focus {
+    border-color: var(--point-color);
+    outline: 0;
+}
+
+.index_input {
+    padding: 20px 15px;
+    color: var(--main-color);
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid var(--border-color);
+    box-sizing: border-box;
+}
+
+.index_btn_login,
+.index_link_signup {
+    display: block;
+    margin: 10px 0;
+    padding: 0 10px;
+    color: var(--main-color);
+    font-size: 14px;
+    line-height: 45px;
+    background-color: var(--bg2-color);
+    border-radius: 3px;;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.index_btn_login {
+    margin-top: 25px;
+}
+
+.index_link_find_account {
+    display: block;
+    padding: 0 10px;
+    font-size: 14px;
+    line-height: 45px;
 }
